--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,12 +17,15 @@
         <li><a href="/products/create">Add a Cube</a></li>
         <li><a href="/accessory/create">Add an Accessory</a></li>
         <li><a href="/about">About</a></li>
+        <li><a href="/auth/register">Register</a></li>
+        <li><a href="/auth/login">Login</a></li>
+        <li><a href="/auth/logout">Logout</a></li>
       </ul>
     </header>
     <main>
 
-     {{{body}}}
-    
+      {{{body}}}
+
     </main>
   </div>
   <footer>&copy; Cubicle: Exercise for Express.js and Handlebars</footer>
