--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,7 +23,9 @@
       </ul>
     </header>
     <main>
-
+      {{#if error}}
+      <span class="error">{{error}}</span>
+      {{/if}}
       {{{body}}}
 
     </main>
